<resources>
    <string name="appName">yummy yummy</string>

    <string name="placeholder">Placeholder Text</string>

    <string name="orderFood">Add To Basket</string>
    <string name="removeFood">Remove From Basket</string>
    <string name="emptyBasket">your basket is empty!</string>

    <string name="updateAddress">Update Map</string>

    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_choose_food">Food</string>
    <string name="title_activity_basket">Basket</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_confirmation">@string/titleConfirmation</string>

    <string name="titleChoosingFood">Choose Your Food:</string>
    <string name="titleViewBasket">Your Basket:</string>
    <string name="titleDelivery">Delivery Location:</string>
    <string name="titlePayment">Almost Done!</string>
    <string name="titleConfirmation">On It\'s Way!</string>

    <string name="subtitlePayment">please pay for your food:</string>
    <string name="subtitleConfirmation">your order will be with you shortly!</string>

    <string name="hintAddressLineOne">Address Line One</string>
    <string name="hintAddressCity">City</string>
    <string name="hintAddressCounty">County</string>
    <string name="hintAddressPostcode">Postcode</string>

</resources>
